blkid: add LVM2 support and a fix _sprintf_uuid() bug
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/libs/blkid/src/probers/Makefile.am
+++ b/libs/blkid/src/probers/Makefile.am
@@ -26,6 +26,7 @@ libprobers_a_SOURCES =	probers.h \
 			romfs.c \
 			ntfs.c \
 			hfs.c \
-			iso9660.c
+			iso9660.c \
+			lvm.c
 
 all-local: $(lib_LIBRARIES)
