--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -31,11 +31,23 @@ EXTRA_DIST = 	expected \
 		ts-login-checktty \
 		ts-login-islocal \
 		ts-look-separator \
-		ts-mount-noncanonical \
+		ts-lscpu-i386-amdshanghai \
+		ts-lscpu-i386-dellpe700 \
+		ts-lscpu-i386-intels5000phb \
+		ts-lscpu-i386-xenpara \
+		ts-lscpu-ia64-hpmatterhorn \
+		ts-lscpu-ia64-hprx1620 \
+		ts-lscpu-ia64-pg0 \
+		ts-lscpu.sh \
+		ts-lscpu-x86_64-hpdl585 \
+		ts-lscpu-x86_64-ibme326m \
+		ts-lscpu-x86_64-necem14 \
+		ts-lscpu-x86_64-xenfull \
 		ts-mount-devname \
 		ts-mount-label \
 		ts-mount-move \
 		ts-mount-mtablock \
+		ts-mount-noncanonical \
 		ts-mount-paths \
 		ts-mount-remount \
 		ts-mount-special \
@@ -45,6 +57,7 @@ EXTRA_DIST = 	expected \
 		ts-swapon-devname \
 		ts-swapon-label \
 		ts-swapon-uuid
+
 
 clean-local:
 	rm -rf output diff
