blkid: add highpoint{37x,45x} RAIDs
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/libs/blkid/src/probers/Makefile.am
+++ b/libs/blkid/src/probers/Makefile.am
@@ -30,6 +30,7 @@ libprobers_a_SOURCES =	probers.h \
 			udf.c \
 			vfat.c \
 			luks.c \
+			highpoint_raid.c \
 			lvm.c
 
 all-local: $(lib_LIBRARIES)
