blkid: add minix
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/libs/blkid/src/probers/Makefile.am
+++ b/libs/blkid/src/probers/Makefile.am
@@ -32,6 +32,7 @@ libprobers_a_SOURCES =	probers.h \
 			luks.c \
 			highpoint_raid.c \
 			vxfs.c \
+			minix.c \
 			lvm.c
 
 all-local: $(lib_LIBRARIES)
