tools: add checkincludes.pl (from linux kernel)
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -14,6 +14,10 @@ SUBDIRS = \
 	text-utils \
 	tests
 
+
+RCS_FIND_IGNORE := \( -name SCCS -o -name BitKeeper -o -name .svn -o \
+		-name CVS -o -name .pc -o -name .hg -o -name .git \) -prune -o
+
 if LINUX
 SUBDIRS += \
 	hwclock \
@@ -41,6 +45,13 @@ EXTRA_DIST = \
 distclean-local:
 	-find . -name \*~ -o -name \*.orig -o -name \*.rej | xargs rm -f
 	rm -rf autom4te.cache
+
+
+checkincludes:
+	-find * $(RCS_FIND_IGNORE) \
+		-name '*.[hcS]' -type f -print | sort -u \
+		| xargs $(top_srcdir)/tools/checkincludes.pl
+
 
 ENABLE_ALL = --enable-static-programs \
  --enable-elvtune --enable-init --enable-kill --enable-last \
