swapon: add swap format detection and pagesize check
As swap format depends on the pagesize being used, it may happen
that the pagesize of the swap space and the current pagesize differ,
resulting in swapon to fail when trying to enable such a swap space.
In such a case swapon should rather reinitialize the swap space.

[kzak@redhat.com: - add blkdev.c to the global swapon_SOURCES
                  - don't try to detect for huge pages on small swap
                    areas (or when read() returns less than MAX_PAGESIZE)
                  - fix fprintf() format string]

Co-Author: Olaf Hering <olh@suse.de>
Signed-off-by: Matthias Koenig <mkoenig@suse.de>
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/mount/Makefile.am
+++ b/mount/Makefile.am
@@ -24,7 +24,8 @@ umount_SOURCES = umount.c $(mount_common)
 umount_CFLAGS = $(SUID_CFLAGS) $(AM_CFLAGS)
 umount_LDFLAGS = $(SUID_LDFLAGS) $(AM_LDFLAGS)
 
-swapon_SOURCES = swapon.c swap_constants.h $(utils_common)
+swapon_SOURCES = swapon.c swap_constants.h $(utils_common) \
+	../lib/linux_version.c ../lib/blkdev.c
 
 losetup_SOURCES = lomount.c sundries.c xmalloc.c realpath.c \
 	loop.h lomount.h xmalloc.h sundries.h realpath.h
@@ -71,7 +72,6 @@ endif
 
 if HAVE_VOLUME_ID
 utils_common += fsprobe_volumeid.c
-swapon_SOURCES += ../lib/linux_version.c ../lib/blkdev.c
 LDADD_common += $(VOLUMEID_LIBS)
 LDADD_common_static += $(VOLUMEID_LIBS_STATIC)
 endif
