--- a/libs/blkid/src/probers/Makefile.am
+++ b/libs/blkid/src/probers/Makefile.am
@@ -33,6 +33,7 @@ libprobers_a_SOURCES =	probers.h \
 			highpoint_raid.c \
 			vxfs.c \
 			minix.c \
+			ufs.c
 			lvm.c
 
 all-local: $(lib_LIBRARIES)
