blkid: add HPFS
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/libs/blkid/src/probers/Makefile.am
+++ b/libs/blkid/src/probers/Makefile.am
@@ -33,7 +33,8 @@ libprobers_a_SOURCES =	probers.h \
 			highpoint_raid.c \
 			vxfs.c \
 			minix.c \
-			ufs.c
+			ufs.c \
+			hpfs.c \
 			lvm.c
 
 all-local: $(lib_LIBRARIES)
