blkid: add squashfs
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/libs/blkid/src/probers/Makefile.am
+++ b/libs/blkid/src/probers/Makefile.am
@@ -35,6 +35,7 @@ libprobers_a_SOURCES =	probers.h \
 			minix.c \
 			ufs.c \
 			hpfs.c \
+			squashfs.c \
 			lvm.c
 
 all-local: $(lib_LIBRARIES)
