blkid: add netware (NSS)
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/libs/blkid/src/probers/Makefile.am
+++ b/libs/blkid/src/probers/Makefile.am
@@ -36,6 +36,7 @@ libprobers_a_SOURCES =	probers.h \
 			ufs.c \
 			hpfs.c \
 			squashfs.c \
+			netware.c \
 			lvm.c
 
 all-local: $(lib_LIBRARIES)
