blkid: add sysv and xenix
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/libs/blkid/src/probers/Makefile.am
+++ b/libs/blkid/src/probers/Makefile.am
@@ -37,6 +37,7 @@ libprobers_a_SOURCES =	probers.h \
 			hpfs.c \
 			squashfs.c \
 			netware.c \
+			sysv.c \
 			lvm.c
 
 all-local: $(lib_LIBRARIES)
