--- a/tests/helpers/Makefile.am
+++ b/tests/helpers/Makefile.am
@@ -1,4 +1,4 @@
 include $(top_srcdir)/config/include-Makefile.am
 
-noinst_PROGRAMS = test_sysinfo test_pathnames
+noinst_PROGRAMS = test_sysinfo test_pathnames test_byteswap
 
