tests: add md5 regression test
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/tests/commands.sh.in
+++ b/tests/commands.sh.in
@@ -10,6 +10,7 @@ TS_TESTUSER=${TS_TESTUSER:-"test"}
 TS_HELPER_SYSINFO="$TS_TOPDIR/helpers/test_sysinfo"
 TS_HELPER_PATHS="$TS_TOPDIR/helpers/test_pathnames"
 TS_HELPER_BYTESWAP="$TS_TOPDIR/helpers/test_byteswap"
+TS_HELPER_MD5="$TS_TOPDIR/helpers/test_md5"
 
 # external commands
 TS_ECMD_BLKID="@BLKID@"
