--- a/libs/blkid/blkid.pc.in
+++ b/libs/blkid/blkid.pc.in
@@ -6,7 +6,6 @@ includedir=@includedir@
 Name: blkid
 Description: Block device id library
 Version: @BLKID_VERSION@
-Requires: uuid @DEVMAPPER_REQ@
 Cflags: -I${includedir}
 Libs: -L${libdir} -lblkid
-Libs.private: @DEVMAPPER_PC_LIBS@
+Libs.private: uuid
