blkid: use Requires.private and fix the include directory
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/libs/blkid/blkid.pc.in
+++ b/libs/blkid/blkid.pc.in
@@ -6,6 +6,6 @@ includedir=@includedir@
 Name: blkid
 Description: Block device id library
 Version: @BLKID_VERSION@
-Cflags: -I${includedir}
+Requires.private: uuid
+Cflags: -I${includedir}/blkid
 Libs: -L${libdir} -lblkid
-Libs.private: uuid
