blkid: add btrfs support
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/libs/blkid/src/probers/Makefile.am
+++ b/libs/blkid/src/probers/Makefile.am
@@ -38,6 +38,7 @@ libprobers_a_SOURCES =	probers.h \
 			squashfs.c \
 			netware.c \
 			sysv.c \
+			btrfs.c \
 			lvm.c
 
 all-local: $(lib_LIBRARIES)
