blkid: add -p and low-probe mode to blkid binary
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/libs/blkid/bin/Makefile.am
+++ b/libs/blkid/bin/Makefile.am
@@ -1,6 +1,6 @@
 include $(top_srcdir)/config/include-Makefile.am
 
-AM_LDFLAGS += -L$(top_builddir)/libs/bkid/src -lblkid
+AM_LDFLAGS += -L$(top_builddir)/libs/blkid/src -lblkid
 AM_CPPFLAGS += -I$(top_builddir)/libs/blkid/src/
 
 sbin_PROGRAMS = blkid
