blkid: add support for /etc/blkid.conf file
We need a config file for the library. Now the library supports
config options:

	EVALUATION=<method>[,<method>]

	SEND_UEVENT=<yes|not>

	CACHE_FILE=<path>

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/libs/blkid/src/Makefile.am
+++ b/libs/blkid/src/Makefile.am
@@ -9,6 +9,7 @@ lib_LIBRARIES = libblkid.a
 libblkid_a_SOURCES = cache.c dev.c devname.c devno.c getsize.c llseek.c  \
 		     probe.c read.c resolve.c save.c tag.c version.c verify.c \
 		     encode.c blkid.h blkidP.h list.h probers/probers.h \
+		     config.c \
 		     $(top_srcdir)/lib/blkdev.c \
 		     $(top_srcdir)/lib/linux_version.c \
 		     $(top_srcdir)/lib/md5.c
