blkid: clean up man pages
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/libs/blkid/Makefile.am
+++ b/libs/blkid/Makefile.am
@@ -6,7 +6,7 @@ SUBDIRS = src bin
 pkgconfigdir = $(usrlibexecdir)/pkgconfig
 pkgconfig_DATA = blkid.pc
 
-dist_man_MANS = libblkid.3 blkid.8
+dist_man_MANS = libblkid.3
 
-EXTRA_DIST = README.blkid blkid.pc blkid.pc.in libblkid.3.in blkid.8.in
+EXTRA_DIST = README.blkid blkid.pc blkid.pc.in libblkid.3
 
