blkid: add findfs(8)
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/libs/blkid/bin/Makefile.am
+++ b/libs/blkid/bin/Makefile.am
@@ -3,13 +3,14 @@ include $(top_srcdir)/config/include-Makefile.am
 AM_LDFLAGS += -L$(top_builddir)/libs/blkid/src -lblkid
 AM_CPPFLAGS += -I$(top_builddir)/libs/blkid/src/
 
-sbin_PROGRAMS = blkid
-dist_man_MANS = blkid.8
+sbin_PROGRAMS = blkid findfs
+dist_man_MANS = blkid.8 findfs.8
 
-shell_in_files = blkid.sh.in
+shell_in_files = blkid.sh.in findfs.sh
 noinst_SCRIPTS = $(shell_in_files:.sh.in=.sh)
 
 blkid_SOURCES = blkid.c
+findfs_SOURCES = findfs.c
 
 CLEANFILES = $(noinst_SCRIPTS)
 
