build-sys: add --with=fsprobe=builtin
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -192,17 +192,25 @@ AC_ARG_ENABLE([mount],
 
 AM_CONDITIONAL(HAVE_BLKID, false)
 AM_CONDITIONAL(HAVE_VOLUME_ID, false)
+AM_CONDITIONAL(BUILD_LIBBLKID, false)
+
+build_mount=yes
+have_blkid=no
+have_volume_id=no
+if test "x$with_fsprobe" = xblkid; then
+  UTIL_CHECK_LIB(blkid, blkid_known_fstype)
+elif test "x$with_fsprobe" = xvolume_id; then
+  UTIL_CHECK_LIB(volume_id, volume_id_encode_string)
+elif test "x$with_fsprobe" = xbuiltin; then
+  have_blkid=yes
+  AC_DEFINE(HAVE_LIBBLKID,1,[Define to 1 if you have the -lblkid.])
+  AM_CONDITIONAL(HAVE_BLKID, true)
+  AM_CONDITIONAL(BUILD_LIBBLKID, true)
+fi
+
 if test "${enable_mount}" = "no"; then
   build_mount=no
 elif test "x$linux_os" = xyes; then
-  build_mount=yes
-  have_blkid=no
-  have_volume_id=no
-  if test "x$with_fsprobe" = xblkid; then
-    UTIL_CHECK_LIB(blkid, blkid_known_fstype)
-  elif test "x$with_fsprobe" = xvolume_id; then
-    UTIL_CHECK_LIB(volume_id, volume_id_encode_string)
-  fi
   if test "x$have_blkid" = xno && test "x$have_volume_id" = xno; then
     AC_MSG_ERROR([blkid or volume_id is needed to build util-linux-ng mount utilities])
   fi
@@ -210,7 +218,9 @@ else
   AC_MSG_WARN([non-linux system; do not build mount utilities])
   build_mount=no
 fi
+
 AM_CONDITIONAL(BUILD_MOUNT, test "x$build_mount" = xyes)
+
 
 dnl UTIL_PKG_STATIC(VARIABLE, MODULES)
 dnl ----------------------------------
