build-sys: libtoolize by libtool-2
We need an infrastructure for stared libraries. The latest libtool-2
seems useful and it's definitely better than the old 1.5 crap.

You need to install libtool-2 when you want to run ./autogen.sh script
after checkout from git repository.

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/config/include-Makefile.am
+++ b/config/include-Makefile.am
@@ -12,3 +12,12 @@ AM_LDFLAGS =
 # conditional is false.
 # Work the bug around until it is fixed:
 dist_noinst_DATA = $(dist_man_MANS)
+
+# Paths to in-tree libraries (use ul_ prefix to avoid possible collisions)
+#
+ul_libblkid_srcdir = $(top_builddir)/libs/blkid/src
+ul_libblkid_la = $(ul_libblkid_srcdir)/libblkid.la
+
+$(ul_libblkid_la):
+	$(MAKE) -C $(ul_libblkid_srcdir)
+
