--- a/configure.ac
+++ b/configure.ac
@@ -3,6 +3,7 @@ AC_INIT(util-linux-ng, 2.14, kzak@redhat.com)
 AC_PREREQ(2.60)
 
 AC_CONFIG_AUX_DIR(config)
+AC_CONFIG_MACRO_DIR([m4])
 
 AM_INIT_AUTOMAKE([check-news -Wall foreign 1.9 dist-bzip2])
 
@@ -19,11 +20,13 @@ BLKID_VERSION_RELEASE=0
 BLKID_DATE="10-Feb-2009"
 
 BLKID_VERSION=$BLKID_VERSION_MAJOR.$BLKID_VERSION_MINOR.$BLKID_VERSION_RELEASE
+BLKID_VERSION_INFO=`expr $BLKID_VERSION_MAJOR + $BLKID_VERSION_MINOR`:$BLKID_VERSION_RELEASE:$BLKID_VERSION_MINOR
 
 AC_SUBST(BLKID_VERSION_MAJOR)
 AC_SUBST(BLKID_VERSION_MINOR)
 AC_SUBST(BLKID_VERSION_RELEASE)
 AC_SUBST(BLKID_VERSION)
+AC_SUBST(BLKID_VERSION_INFO)
 
 AC_DEFINE_UNQUOTED(BLKID_VERSION, "$BLKID_VERSION", [libblkid version string])
 AC_DEFINE_UNQUOTED(BLKID_DATE, "$BLKID_DATE", [libblkid date string])
@@ -50,7 +53,9 @@ AC_PROG_CC_STDC
 AC_GNU_SOURCE
 AC_CANONICAL_HOST
 AC_C_BIGENDIAN
-AC_PROG_RANLIB
+
+dnl libtool-2
+LT_INIT
 
 linux_os=no
 case ${host_os} in
