--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ config.sub
 stamp-h
 stamp-h1
 update.log
-m4
+m4/*.m4
 aclocal.m4
 ABOUT-NLS
 config.rpath
@@ -31,7 +31,15 @@ compile
 depcomp
 install-sh
 missing
-ltmain.sh
 libtool
 .deps
 .libs
+
+# libtool-2 stuff -- temporary added to repository (because libtool-2.x.x is
+#                    still not in avaialable in many Linux distributions)
+!config/ltmain.sh
+!m4/libtool.m4
+!m4/ltoptions.m4
+!m4/ltsugar.m4
+!m4/ltversion.m4
+!m4/lt~obsolete.m4
