mount: generic blkid/volume_id wrapper, use blkid_evaluate_*
 * moves the generic libblkid/libvolume_id wrapper (fsprobe.c) from
   mount/ to lib/. We'll use the wrapper in cfdisk and fsck.

   The wrapper supports:

    - obsolete volume_id (udev)
    - obsolete libblkid (e2fsprogs)
    - libblkid (util-linux-ng)

 * mount, umount and swapon when linked against the new libblkid use

    - low-level probing code to read LABEL, UUID or FSTYPE from a device
    - high-level blkid_evaluate_spec() to convert LABEL/UUID to devname

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -190,6 +190,7 @@ elif test "x$with_fsprobe" = xvolume_id; then
 elif test "x$with_fsprobe" = xbuiltin; then
   have_blkid=yes
   AC_DEFINE(HAVE_LIBBLKID,1,[Define to 1 if you have the -lblkid.])
+  AC_DEFINE(HAVE_BLKID_EVALUATE_SPEC,1,[Define to 1 if you have the blkid_evaluate_spec().])
   AM_CONDITIONAL(HAVE_BLKID, true)
   AM_CONDITIONAL(BUILD_LIBBLKID, true)
 fi
