--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,13 +1,15 @@
 include $(top_srcdir)/config/include-Makefile.am
 
-noinst_PROGRAMS = test_blkdev
+noinst_PROGRAMS = test_blkdev test_ismounted
 
-test_blkdev_SOURCES = 	$(top_srcdir)/lib/blkdev.c
+test_blkdev_SOURCES = blkdev.c
+test_ismounted_SOURCES = ismounted.c
 
 if LINUX
-test_blkdev_SOURCES += $(top_srcdir)/lib/linux_version.c
+test_blkdev_SOURCES += linux_version.c
 endif
 
-test_blkdev_CFLAGS = -DMAIN_TEST_BLKDEV
+test_blkdev_CFLAGS = -DTEST_PROGRAM
+test_ismounted_CFLAGS = -DTEST_PROGRAM
 
 
